# scgen

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bicriteria_sample_problems/DF,SC,NAC_RSC,RAC_FC_maxUDA/: Instance_1.json  Instance_2.json  Instance_3.json
bicriteria_sample_problems/DF,SC,NAS_RSC,MAC_FC_maxUDA/: Instance_1.json  Instance_2.json
bicriteria_sample_problems/DF,SC,NAS_RSC,MAC_FC_sumUDA/: Instance_2.json
bicriteria_sample_problems/DF,SC_RSC,MAC_FC_sumUDA/: Instance_1.json  Instance_2.json  Instance_3.json
bicriteria_sample_problems/DF,SC__SAC_FC/: Instance_1.json  Instance_2.json
examples/: exampleRunner.py
examples/ForPatching/: CostWithDisruptionAndMitigationCapacity.json  CostWithDisruptionRunner.py  EasyToMitigate.json  EasyToMitigateRunner.py  MediumOverCapacities.json  MediumOverCapacitiesLargeRunner.py  MediumOverCapacitiesRunner.py  MediumOvercapacitiesLarge.json  NumberSupplierLimit.json  SupplierActivationCost.json  SupplierActivationCostRunner.py  SupplierDemandCost.json  SupplierDemandCostRunner.py
examples/mitigation_examples/: allocationSettingsSimple.json  allocationSettingsSimpleRunner.py  demandSettingsSimple.json  demandSettingsSimpleRunner.py  michaelsDemandSettings.json  michaelsDemandSettingsRunner.py  missingRequirement.json  missingRequirementRunner.py  realisticSupplyChain.json  realisticSupplyChainRunner.py  shippingTimesSettings.json  shippingTimesSettingsRunner.py  simpleExample.py
notebooks/: GettingStarted.ipynb
scgen/base_components/: Distribution.py  Element.py  Module.py
(+30 files in other folders)
