[tool.poetry]
name = "scgen"
version = "0.1.0"
description = "random supply-chain generator"
authors = ["Erik Diessel"]

[tool.poetry.dependencies]
python = ">= 3.7"
pandas = "^0.25.3"
openpyxl = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
